Fix homepage layout on mobile

--- a/client/shared.sass
+++ b/client/shared.sass
@@ -10,6 +10,7 @@ $secondary-color: #fdf4bb
 html, body
     min-height: 100vh
     margin: 0
+    overflow-x: hidden
 
 body
     margin: 0
@@ -66,7 +67,7 @@ span.Logo
     padding-top: 35%
 
     @media (max-width: $mobile)
-        padding-top: 60%
+        padding-top: 40%
 
     .container
         position: relative
